# iot-lgvl

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/ui/: lv_font_chinese_12.c  lv_font_chinese_16.c  lv_font_chinese_18.c  lv_font_chinese_24.c  lv_login_page.c  lv_login_page.h  lv_sensor_test.c  lv_sensor_test.h
